Overflow-y on contacts's list fixed

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ aside {
 .contact-list {
     background-color: white;
     overflow-y: scroll;
-    height: 460px;
+    height: 65%;
 }
 
 .contact-row {
